// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with a text children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <section
    className="sc-bwzfXH bWibny"
  >
    This is a text
  </section>
</span>
`;

exports[`When using snapshots Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <section
    className="sc-bwzfXH bWibny"
  >
    <div />
  </section>
</span>
`;

exports[`When using snapshots with the dimmed prop Should render with a text children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <section
    className="sc-bwzfXH cbGbWf"
  >
    This is a text
  </section>
</span>
`;

exports[`When using snapshots with the dimmed prop Should render with an element children 1`] = `
<span
  className="sc-bdVaJa lbJuWU"
>
  <section
    className="sc-bwzfXH cbGbWf"
  >
    <div />
  </section>
</span>
`;
